[package]
name = "wasm"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/ShinySylveon04/PokemonRNGTools"
description = "wasm powering https://chatot.pokemonrng.com"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.2"
num_enum = "0.5"
js-sys = "0.3.55"
