[package]
name = "chatot_plugin_template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = {version = "=0.2.78", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
chatot_forms = { path = "../forms" }
